--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lucide-react": "^0.399.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-scroll": "^1.9.0",
     "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
